@@ -1,5 +1,6 @@
 1.0.0
 -----
+ * Allow DriverUtils to be pluggable (CASSANDRASC-88)
  * Add JMX health checks during the periodic health checks (CASSANDRASC-87)
  * Sidecar should be able to load metadata even if the local instance is unavailable (CASSANDRASC-79)
  * Expose additional SSL configuration options for the Sidecar Service (CASSANDRASC-82)
